--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="fontawesome-free-5.15.2-web/css/all.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,32 +14,37 @@
 
 <body>
     <header>
-        <img src="images/logo/Reservia@3x.png" alt="logo du site reservia">
-        <nav>
-            <ul>
-                <li><a href="#">Hébergement</a></li>
-                <li><a href="#">Activités</a></li>
-                <li><a href="#">S'inscrire</a></li>
-            </ul>
-        </nav>
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <p>En plein centre ville ou en pleine nature</p>
+        <div id="logo_nav">
+            <img src="images/logo/Reservia@3x.png" alt="logo du site reservia">
+            <nav>
+                <a href="#">Hébergement</a>
+                <a href="#">Activités</a>
+                <a href="#">S'inscrire</a>
+            </nav>
+        </div>
+
+        <div id="title">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+        </div>
+
         <form role="search">
             <div>
-              <input type="search" id="maRecherche" name="q"
-               placeholder="Rechercher sur le site…"
-               aria-label="Rechercher parmi le contenu du site">
-              <button>Rechercher</button>
+                <i class="fas fa-map-marker-alt"></i><input type="search" id="maRecherche" name="q"
+                placeholder="Rechercher sur le site…"
+                aria-label="Rechercher parmi le contenu du site">
+                <button>Rechercher</button>
             </div>
           </form>
+
           <p>Filtres</p>
           <ul>
-              <li>Économique</li>
-              <li>Familial</li>
-              <li>Romantique</li>
-              <li>Animaux autorisés</li>
-              <p>Plus de 500 logement sont disponibles dans cette ville</p>
-          </ul>
+              <li><i class="fas fa-money-bill-wave"></i>Économique</li>
+              <li><i class="fas fa-child"></i>Familial</li>
+              <li><i class="fas fa-heart"></i>Romantique</li>
+              <li><i class="fas fa-cat"></i>Animaux autorisés</li>
+            </ul>
+            <p><i class="fas fa-info"></i>Plus de 500 logement sont disponibles dans cette ville</p>
     </header>
 
     <section>
@@ -105,8 +113,7 @@
         </div>
 
         <aside id="popular">
-            <h2>Les plus populaires</h2>
-            <i class="fas fa-chart-line"></i>
+            <h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
             <div class="popular-list">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
                 <h3>Hôtel le soleil du matin</h3>
