--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link href="fontawesome-free-5.15.2-web/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -9,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reservia</title>
 </head>
 
 <body>
@@ -29,22 +31,21 @@
         </div>
 
         <form role="search">
-            <div>
-                <i class="fas fa-map-marker-alt"></i><input type="search" id="maRecherche" name="q"
-                placeholder="Rechercher sur le site…"
-                aria-label="Rechercher parmi le contenu du site">
-                <button>Rechercher</button>
+            <div id="form">
+                <i class="bi bi-geo-alt-fill"></i>
+                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Marseille, France...">
+                <button class="btn btn-primary" type="submit">Rechercher</button>
             </div>
-          </form>
+        </form>
 
-          <p>Filtres</p>
-          <ul>
-              <li><i class="fas fa-money-bill-wave"></i>Économique</li>
-              <li><i class="fas fa-child"></i>Familial</li>
-              <li><i class="fas fa-heart"></i>Romantique</li>
-              <li><i class="fas fa-cat"></i>Animaux autorisés</li>
-            </ul>
-            <p><i class="fas fa-info"></i>Plus de 500 logement sont disponibles dans cette ville</p>
+        <div id="filters">
+            <h3>Filtres</h3>
+            <a><i class="fas fa-money-bill-wave"></i>Économique</a>
+            <a><i class="fas fa-child"></i>Familial</a>
+            <a><i class="fas fa-heart"></i>Romantique</a>
+            <a><i class="fas fa-cat"></i>Animaux autorisés</a>
+        </div>
+        <p><i class="fas fa-info"></i>Plus de 500 logement sont disponibles dans cette ville</p>
     </header>
 
     <section>
