--- a/index.html
+++ b/index.html
@@ -127,31 +127,49 @@
             
         <aside class="popular">
             <h2>Les plus populaires<i class="fas fa-chart-line"></i></h2>
-            <div class="popular-list">
-                <h3>Hôtel le soleil du matin</h3>
-                <p>Nuit à partir de 128€</p>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+            <div class="popular-card">
+                <div>
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="cover-popular" alt="">
+                </div>
+                <div class="popular-text">
+                    <h3>Hôtel le soleil du matin</h3>
+                    <p>Nuit à partir de 128€</p>
+                    <i class="fas fa-star first-popular"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
             </div>
 
-            <div class="popular-list">
-                <h3>Hôtel le soleil du matin</h3>
-                <p>Nuit à partir de 128€</p>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+            <div class="popular-card">
+                <div>
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" class="cover-popular" alt="">
+                </div>
+                <div class="popular-text">
+                    <h3>Au coeur de l'eau Chambre d'hôtes</h3>
+                    <p>Nuit à partir de 71€</p>
+                    <i class="fas fa-star first-popular"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star grey"></i>
+                </div>
             </div>
 
-            <div class="popular-list">
-                <h3>Hôtel le soleil du matin</h3>
-                <p>Nuit à partir de 128€</p>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+            <div class="popular-card">
+                <div>
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="cover-popular" alt="">
+                </div>
+                <div class="popular-text">
+                    <h3>Hôtel tout bleu et blanc</h3>
+                    <p>Nuit à partir de 68€</p>
+                    <i class="fas fa-star first-popular"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star grey"></i>
+                </div>
             </div>
         </aside>
     </section>
