--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <a href="#hosting">Hébergement</a>
                     <a href="#activities">Activités</a>
-                    <a href="#">S'inscrire</a>
+                    <a href="#" class="sub">S'inscrire</a>
                 </nav>
             </div>
 
@@ -36,18 +36,18 @@
                 <div id="form">
                     <i class="fas fa-map-marker-alt"></i>
                     <input class="form-control" id="exampleDataList" placeholder="Marseille, France...">
-                    <button class="btn" type="submit">Rechercher</button>
+                    <button class="btn" type="submit"><i class="fas fa-search"></i><span class="research">Rechercher</span></button>
                 </div>
             </form>
 
             <div id="filters">
-                <h3>Filtres</h3>
+            <h3>Filtres</h3>
                 <a class="fading-1"><i class="fas fa-money-bill-wave"></i>Économique</a>
                 <a class="fading-1"><i class="fas fa-child"></i>Familial</a>
                 <a class="fading-1"><i class="fas fa-heart"></i>Romantique</a>
                 <a class="fading-1"><i class="fas fa-cat"></i>Animaux autorisés</a>
             </div>
-            <p><i class="fas fa-info"></i>Plus de 500 logement sont disponibles dans cette ville</p>
+            <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
 
         <!-- ***************        SECTION          *************** -->
@@ -59,7 +59,7 @@
                     <a href="#" class="hosting-card">
                         <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="cover" alt="lit superposés">
                         <h3>Auberge la Cannebière</h3>
-                        <p>Nuit à partir de 25€</p>
+                        <p>Nuit à partir de <span class="bold">25€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -70,7 +70,7 @@
                     <a href="" class="hosting-card">
                         <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="cover" alt="lits doubles">
                         <h3>Hôtel du port</h3>
-                        <p>Nuit à partir de 52€</p>
+                        <p>Nuit à partir de <span class="bold">52€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -81,7 +81,7 @@
                     <a href="" class="hosting-card">
                         <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="cover" alt="lit simple">
                         <h3>Hôtel les mouettes</h3>
-                        <p>Nuit à partir de 76€</p>
+                        <p>Nuit à partir de <span class="bold">76€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -92,7 +92,7 @@
                     <a href="" class="hosting-card">
                         <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="cover" alt="lit king size">
                         <h3>Hôtel de la mer</h3>
-                        <p>Nuit à partir de 46€</p>
+                        <p>Nuit à partir de <span class="bold">46€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -103,7 +103,7 @@
                     <a href="" class="hosting-card">
                         <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="cover" alt="lit supersposés doubles en bois">
                         <h3>Auberge Le Panier</h3>
-                        <p>Nuit à partir de 23€</p>
+                        <p>Nuit à partir de <span class="bold">23€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -114,7 +114,7 @@
                     <a href="" class="hosting-card">
                         <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="cover" alt="lit doubles">
                         <h3>Hôtel chez Amina</h3>
-                        <p>Nuit à partir de 96€</p>
+                        <p>Nuit à partir de <span class="bold">96€</span></p>
                         <i class="fas fa-star first"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="popular-text">
                             <h3>Hôtel le soleil du matin</h3>
-                            <p>Nuit à partir de 128€</p>
+                            <p>Nuit à partir de <span class="bold">128€</span></p>
                             <i class="fas fa-star first-popular"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="popular-text">
                             <h3>Au coeur de l'eau Chambre d'hôtes</h3>
-                            <p>Nuit à partir de 71€</p>
+                            <p>Nuit à partir de <span class="bold">71€</span></p>
                             <i class="fas fa-star first-popular"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -163,7 +163,7 @@
                         </div>
                         <div class="popular-text">
                             <h3>Hôtel tout bleu et blanc</h3>
-                            <p>Nuit à partir de 68€</p>
+                            <p>Nuit à partir de <span class="bold">68€</span></p>
                             <i class="fas fa-star first-popular"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -213,23 +213,25 @@
     <!-- ***************        FOOTER          *************** -->
 
     <footer>
-        <div>
-            <h3>À propos</h3>
-            <a href="#">Fonctionnement du site</a>
-            <a href="#">Conditions générales de vente</a>
-            <a href="#">Données et confidentialité</a>
-        </div>
-
-        <div>
-            <h3>Nos hébergements</h3>
-            <a href="#">Charte qualité</a>
-            <a href="#">Soumettre votre hôtel</a>
-        </div>
-
-        <div>
-            <h3>Assistance</h3>
-            <a href="#">Centre d'aide</a>
-            <a href="#">Nous contacter</a>
+        <div class="marge-footer">
+            <div>
+                <h3>À propos</h3>
+                <a href="#">Fonctionnement du site</a> 
+                <a href="#">Conditions générales de vente</a>  
+                <a href="#">Données et confidentialité</a> 
+            </div>
+    
+            <div>
+                <h3>Nos hébergements</h3>
+                <a href="#">Charte qualité</a>
+                <a href="#">Soumettre votre hôtel</a>
+            </div>
+    
+            <div>
+                <h3>Assistance</h3>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
+            </div>
         </div>
     </footer>
 </body>
