--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 
             <div id="filters">
             <h3>Filtres</h3>
-                <a class="fading-1"><i class="fas fa-money-bill-wave"></i>Économique</a>
-                <a class="fading-1"><i class="fas fa-child"></i>Familial</a>
-                <a class="fading-1"><i class="fas fa-heart"></i>Romantique</a>
-                <a class="fading-1"><i class="fas fa-cat"></i>Animaux autorisés</a>
+                <div class="filter-list">
+                    <a class="fading-1"><i class="fas fa-money-bill-wave"></i>Économique</a>
+                    <a class="fading-1"><i class="fas fa-child"></i>Familial</a>
+                    <a class="fading-1"><i class="fas fa-heart"></i>Romantique</a>
+                    <a class="fading-1"><i class="fas fa-cat"></i>Animaux autorisés</a>
+                </div>
             </div>
             <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
