--- a/index.html
+++ b/index.html
@@ -18,38 +18,40 @@
 
     <div class="marge">
         <header>
-            <div id="logo_nav">
-                <img src="images/logo/Reservia@3x.png" alt="logo du site reservia">
-                <nav>
-                    <a href="#hosting">Hébergement</a>
-                    <a href="#activities">Activités</a>
-                    <a href="#" class="sub">S'inscrire</a>
-                </nav>
-            </div>
+            <nav id="logo_nav">
+                <p class="item1"><img src="images/logo/Reservia@3x.png" alt="logo du site reservia"></p>
+                <p class="item2"><a href="#hosting">Hébergement</a></p>
+                <p class="item3"><a href="#activities">Activités</a></p>
+                <p class="item4"><a href="#" class="sub">S'inscrire</a></p>
+            </nav>
 
-            <div id="title">
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en pleine nature</p>
-            </div>
-
-            <form role="search">
-                <div id="form">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <input class="form-control" id="exampleDataList" placeholder="Marseille, France...">
-                    <button class="btn" type="submit"><i class="fas fa-search"></i><span class="research">Rechercher</span></button>
+            <div class="top">
+                <div id="title">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre ville ou en pleine nature</p>
                 </div>
-            </form>
-
-            <div id="filters">
-            <h3>Filtres</h3>
-                <div class="filter-list">
-                    <a class="fading-1"><i class="fas fa-money-bill-wave"></i>Économique</a>
-                    <a class="fading-1"><i class="fas fa-child"></i>Familial</a>
-                    <a class="fading-1"><i class="fas fa-heart"></i>Romantique</a>
-                    <a class="fading-1"><i class="fas fa-cat"></i>Animaux autorisés</a>
+    
+                <form role="search">
+                    <div id="form">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <input class="form-control" id="exampleDataList" placeholder="Marseille, France...">
+                        <button class="btn" type="submit"><i class="fas fa-search"></i><span class="research">Rechercher</span></button>
+                    </div>
+                </form>
+    
+                <div id="filters">
+                <h3>Filtres</h3>
+                    <div class="filter-list">
+                        <a class="fading-1"><i class="fas fa-money-bill-wave"></i>Économique</a>
+                        <a class="fading-1"><i class="fas fa-child"></i>Familial</a>
+                        <a class="fading-1"><i class="fas fa-heart"></i>Romantique</a>
+                        <a class="fading-1"><i class="fas fa-cat"></i>Animaux autorisés</a>
+                    </div>
+                </div>
+                <div class="info">
+                    <i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </div>
-            <p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </header>
 
         <!-- ***************        SECTION          *************** -->
